checking in minor index.html change

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <!-- City deep dive current day -->
                     <div class="current-day">
                         <h2 id="city-info"></h2>
+                        <div id="current-day-info">
+                            <!-- Will generate info for today in that city here -->
+                        </div>
                     </div>
                     <!-- 5 day forecase for selected city-->
                     <div>
