Adding 5 day weather forecast

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row mt-3">
                 <!-- Column for the search/city sidebar-->
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 col-lg-4">
                     <div>
                         <h2>Search for a City: </h2>
                         <form id="search-form">
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <!-- Column for the city search results -->
-                <div class="col-12 col-md-8">
+                <div class="col-12 col-md-8 col-lg-8">
                     <!-- City deep dive current day -->
                     <div class="current-day">
                         <h2 id="city-info"></h2>
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <!-- 5 day forecase for selected city-->
-                    <div>
+                    <div id="five-day-forecast" class="five-day-forecast mt-3">
 
                     </div>
                 </div>
