adding previous search terms as buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <hr>
                     </div>
                     <!-- Div for major city search buttons -->
-                    <div>
+                    <div id="prev-search-terms">
 
                     </div>
                 </div>
