--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Weather Dashboard</h1>
     </header>
     <main>
-        <div class="container">
+        <div class="container-div">
             <div class="row mt-3">
                 <!-- Column for the search/city sidebar-->
                 <div class="col-12 col-md-4 col-lg-4">
