addressing mobile responsiveness issues

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Import Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,800;1,300&display=swap" rel="stylesheet">
+    
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -41,7 +46,7 @@
                     </div>
                     <!-- 5 day forecase for selected city-->
                     <div id="five-day-forecast" class="five-day-forecast mt-3">
-
+                        <h2>5 Day Forecast</h2>
                     </div>
                 </div>
             </div>
